# shiitake-uranai-mcp

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/server/: shiitake_uranai_mcp_server.rs
src/shiitake_domain/: constellation.rs  mod.rs
