[package]
name = "shiitake-uranai-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
chrono-tz = "0.10.3"
reqwest = "0.12.15"
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
schemars = "0.8.22"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
